tests/test-dirs/upstream-typing-recovery/original-tests/ctor_arity_mismatch.compilers.reference
File "ctor_arity_mismatch.ml", line 1:
Error: Multiple errors were encountered
File "ctor_arity_mismatch.ml", line 12, characters 8-11:
12 | let x = A 1
             ^^^
  The constructor A expects 2 argument(s),
  but is applied here to 1 argument(s)
File "ctor_arity_mismatch.ml", line 17, characters 12-17:
17 | let y = x + "foo"
                 ^^^^^
  This constant has type string but an expression was expected of type int
